--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <html>
 <p><h1>Hi Welcome</h1></p>
+<label for='message'>Give your message here</label>
+<input type='text' id = 'message'>
 </html>
